Links to twitter, chess.com and telegram added

--- a/config.toml
+++ b/config.toml
@@ -8,9 +8,10 @@ theme = 'hyde-my'
   Email = "oc@co.ru"
   linkedin = "osintsev"
   github = "osminogin"
-  twiter = "osminogin"
+  twitter = "osminogin"
   chesscom = "osminogin"
   telegram = "osminogin"
+  steam = "osminogin"
   description = "I'm a Systems Engineer and Python developer in love with Django, Docker and Linux."
   copyright = 'This work is licensed under a [Creative Commons Attribution 4.0 International License](http://creativecommons.org/licenses/by/4.0/)'
 
